--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "cors": "^2.8.1",
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0",
+    "firebase-admin": "^9.4.2",
+    "firebase-functions": "^3.13.1",
     "mongodb": "^3.2.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
